[project]
name = "unstract-document-service"
version = "0.1.0"
description = "Document processing service"
authors = [
    {name = "Zipstack", email = "devsupport@zipstack.com"},
]
dependencies = [
    "flask==2.3.2",
    "waitress==2.1.2",
    "odfpy>=1.4.1",
    "unoserver==1.5",
    "redis==4.5.5",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["src"]
package-dir = "src"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.0.1",
]
deploy = [
    "gunicorn>=21.2.0",
]
