[project]
name = "unstract-platform-service"
version = "0.0.1"
description = "Helps tools interact and retrieve details from the Unstract platform through the Unstract SDK"
authors = [
    {name = "Zipstack Inc.", email = "devsupport@zipstack.com"},
]
dependencies = [
    "flask~=3.0.0",
    "peewee~=3.16",
    "psycopg2-binary~=2.9",
    "python-dotenv~=1.0",
    "redis~=5.2.1",
    "cryptography>=41.0.7",
    "requests>=2.31.0",
    "unstract-sdk[gcs, azure, aws]~=0.62.1",
    "unstract-flags @ file:///${PROJECT_ROOT}/../unstract/flags",
]
requires-python = ">=3.9,<3.11.1"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
deploy = [
    "gunicorn[gevent]~=23.0",
    # OpenTelemetry for tracing and profiling
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp",
    "opentelemetry-instrumentation-flask",
    "opentelemetry-instrumentation-psycopg2",
    "opentelemetry-instrumentation-redis",
    "opentelemetry-instrumentation-requests",
    "opentelemetry-instrumentation-logging",
    "opentelemetry-distro",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["src"]
package-dir = "src"

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.0.1",
]

[tool.pdm.resolution.overrides]
aioboto3 = "13.1.1"
aiobotocore = "2.13.1"
boto3 = "1.34.131"

[tool.pdm.scripts]
platform_service.cmd = "./entrypoint.sh"
platform_service.env_file = ".env"
platform_service.help = "Runs the Unstract platform service"
